# NNToChips

./: .gitignore  MLP_GA.py  compute_overall_pareto_from_populations.py  conv_relu_fusion_sweep.py  convconv.py  count_conv_ops_onnx.py  evaluate_depfin.py  evaluate_depfin2_single_config.py  evaluate_depfin2_variation.py  evaluate_gemm.py  evaluate_gmlp.py  explore_tiled_workload_mapping_choices.py  main.py  main_stream_co_conv_relu.py  optimization_problem.py  optimize_depfin2_ga.py  optimize_depfin2_ilp.py  optimize_depfin2_with_main.py  optimize_depfin2_with_main2.py  optimize_depfin2_with_main_tiling.py  optimize_depfin2_with_main_tiling_ga.py  optimize_udc_architecture.py  pyproject.toml  test_MLP.py  test_tiled_workload_viz.py  test_udc_stream.py  udc.py  utils.py  visualize_depfin2_ga.ipynb  visualize_results.py
inputs/big_gemm/hardware/: tpu_like_quad_core.yaml
inputs/big_gemm/mapping/: tpu_like_quad_core.yaml
inputs/convconv1/hardware/: soc.yaml
inputs/convconv1/mapping/: mapping.yaml
inputs/convconv2/hardware/: soc.yaml
inputs/convconv2/mapping/: mapping.yaml
inputs/test_udc/: udc_core.yaml
stages/: accelerator_template_parser.py  genetichardware.py  onnxparser.py  optimized_tiled_workload_generation.py  tiled_workload_generation_optimization.py  tiled_workload_optimization.py  tiling_combination_evaluation.py  tiling_genetic_optimization.py
tests/: test_accelerator_template_parser.py  test_genetichardware.py  test_onnxparser.py  test_optimized_tiled_workload_generation.py  test_stream_integration_template_parser.py
(+26 files in other folders)
